portfolio-site/ Route transitions with CSSTransitionGroup
Responsive showcase images for enrichme, code tidy

--- a/src/components/SocialIcons/_SocialIcons.scss
+++ b/src/components/SocialIcons/_SocialIcons.scss
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 0;
   flex-direction: column;
-  width: $nav-logo-w;
+  width: $spacing-l;
   text-align: center;
   z-index: 4;
   
