--- a/src/components/Nav/_Nav.scss
+++ b/src/components/Nav/_Nav.scss
@@ -4,6 +4,7 @@
   right: 0;
   width: 100%;
   background-color: $white;
+  z-index: 1;
 
   &-logo {
     padding: .8rem 1.2rem 0;
@@ -92,7 +93,7 @@
 
   nav {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -141,7 +142,7 @@
     .nav-btn {
       padding: 0;
       margin-top: 1.2rem;
-      min-width: $nav-logo-w;
+      min-width: $spacing-l;
       text-align: center;
     }
 
