--- a/src/components/LandingPage/_LandingPage.scss
+++ b/src/components/LandingPage/_LandingPage.scss
@@ -1,6 +1,6 @@
 .landing-page {
   height: 70vh;
-  background-color: $grey-300;
+  background-color: $site-bgc;
 
   &-text {
     padding: 0 $spacing-xs;
