--- a/src/components/Nav/_Nav.scss
+++ b/src/components/Nav/_Nav.scss
@@ -97,7 +97,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: $grey-300;
+    background-color: $site-bgc;
 
     ul {
       font-family: 'Zefani';
