--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,6 @@
 :root {
   font-size: 10px;
+  text-size-adjust: 100%;
 
   @media screen and (min-width: 1024px) {
     font-size: 16px;
@@ -9,11 +10,11 @@
 body {
   margin: 5.6rem 0 0;
   padding: 0;
-  font: 400 1.5rem/1.4 'Gilroy-Light', sans-serif;
+  font: 400 1.6rem/1.6 'Gilroy-Light', sans-serif;
+  letter-spacing: .016em;
   color: $black;
   @media screen and (min-width: 768px) {
     margin-top: 0;
-    font-size: 1.6rem;
   }
   @media screen and (min-width: 1024px) {
     font-size: 1rem;
