Organise images file and folder structure,
Implement image on WorkSingle Header, custom styles
for Header title, custom background colour for Browser
Mockup, add links to Works -> WorkSingle, fix link on
Nav logo /home -> /

--- a/src/components/CaseStudy/_BrowserMockup.scss
+++ b/src/components/CaseStudy/_BrowserMockup.scss
@@ -1,6 +1,5 @@
 .browser-mockup {
   padding: $spacing-l;
-  background-color: $bcito;
   box-sizing: border-box;
   overflow: hidden;
 
@@ -55,4 +54,9 @@
       }
     }
   }
+}
+
+// enrichme
+.enrichme .browser-mockup {
+  background-color: #e7ebee;
 }
