--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,7 +8,7 @@ $black:      #4d4d4d;
 
 $site-bgc:   $grey-300;
 
-$enrichme:   lighten($navy, 10%); // #dd3e24;
+$enrichme:   #3f8fa8; // #dd3e24;
 $bcito:      #0066cc;
 $fwaste:     #dd4359;
 
