--- a/src/components/LandingPage/_LandingPage.scss
+++ b/src/components/LandingPage/_LandingPage.scss
@@ -21,20 +21,32 @@
     height: 55%;
     width: 100%;
     background-color: $grey-400;
+  }
 
-    .img {
+  .img {
+    height: 100%;
+    background-color: #181c1f;
+    overflow: hidden;
+
+    img {
       height: 100%;
-      background-color: $navy;
+      width: auto;
     }
   }
 
   // Mobile - landscape
   @media screen and (min-width: 568px) {
     height: 100vh;
+
+    .img img {
+      width: 100%;
+      height: auto;
+    }
   }
 
   @media screen and (min-width: 768px) {
     margin-right: $spacing-l;
+    max-height: 700px;
 
     &-text {
       padding-left: 5rem;
@@ -45,6 +57,19 @@
       top: 0;
       right: -#{$spacing-l};
       width: $img-block-w;
+
+      img {
+        width: auto;
+        height: 100%;
+      }
+    }
+  }
+
+  // Large mobile - landscape
+  @media screen and (min-width: 568px) and (max-height: 500px) {
+    .img img {
+      width: 100%;
+      height: auto;
     }
   }
 
@@ -55,6 +80,7 @@
 
   @media screen and (min-width: 1024px) {
     height: 100vh;
+    
     &-text {
       p {
         font-size: $h5-fs;
