--- a/src/index.scss
+++ b/src/index.scss
@@ -11,5 +11,6 @@
 @import "components/Footer/Footer";
 @import "components/CaseStudy/Header";
 @import "components/CaseStudy/Context";
+@import "components/CaseStudy/Description";
 @import "components/CaseStudy/BrowserMockup";
 @import "components/CaseStudy/MobileMockup";
