--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -31,4 +31,5 @@ $spacing-l: 5rem;
 $img-block-w: 85%;
 
 // Shadow
-$box-shadow-img: -3px 34px 69px -1px rgba(0,0,0,0.4);
+$box-shadow-20: -3px 10px 30px -1px rgba(0, 0, 0, 0.2);
+$box-shadow-40: -3px 34px 69px -1px rgba(0,0,0,0.4);
