--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $black:      #4d4d4d;
 $site-bgc:   $grey-300;
 
 $enrichme:   #3f8fa8; // #dd3e24;
+$enrichme-bg: #e7ebee;
 $bcito:      #0066cc;
 $fwaste:     #dd4359;
 
