--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -13,14 +13,10 @@
   .mr5-m {
     margin-right: $spacing-l;
   }
+}
 
-  .w-40-m {
-    width: 40%;
-  }
-
-  .w-60-m {
-    width: 60%;
-  }
+.pt0 {
+  padding-top: 0 !important; // Not proud of this ..
 }
 
 
@@ -33,7 +29,6 @@
   font-family: 'Brandon Grotesque', sans-serif;
   text-transform: uppercase;
   letter-spacing: .3rem;
-  color: $navy;
 }
 
 // Custom colours
