Add content and style About page

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import "styles/base";
 @import "styles/helpers";
 @import "styles/transitions";
+@import "styles/custom";
 
 @import "components/Nav/Nav";
 @import "components/LandingPage/LandingPage";
