--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -20,6 +20,10 @@ body {
   }
 }
 
+main {
+  display: block;
+}
+
 button {
   cursor: pointer;
 }
@@ -41,7 +45,7 @@ ol,
 p {
   margin: 0;
   padding: 0;
-  max-width: 40em;
+  max-width: 60rem;
 }
 
 h1,
