--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -31,6 +31,20 @@
   letter-spacing: .3rem;
 }
 
+// Elements
+.btn {
+  padding: .7em 1em .5em;
+  color: $gold;
+  border: 1px solid $gold;
+  border-radius: 5em;
+  text-align: center;
+
+  i {
+    margin-left: .2em;
+    font-size: .9em;
+  }
+}
+
 // Custom colours
 .enrichme .title {
   color: $enrichme;
