--- a/src/components/CaseStudy/_MobileMockup.scss
+++ b/src/components/CaseStudy/_MobileMockup.scss
@@ -36,3 +36,8 @@
 .enrichme .mobile-mockup {
   background-color: $enrichme-bg;
 }
+
+// BCITO
+.bcito .mobile-mockup {
+  background-color: $bcito-bg;
+}
