--- a/src/components/CaseStudy/_Context.scss
+++ b/src/components/CaseStudy/_Context.scss
@@ -32,6 +32,10 @@
     &-about {
       grid-column: span 2;
     }
+
+    .col-2 {
+      grid-column: 1 / span 2;
+    }
   }
 
   @media screen and (min-width: 768px) {
@@ -56,4 +60,9 @@
       grid-column: 2 / span 2;
     }
   }
+}
+
+// Custom
+.bcito .col-2:last-child {
+  margin-top: -$spacing-xs / 2;
 }
