Add copy and update alt tags for enrichme
Change HTML markup to be more semantic, add
fallback images for videos, fix spacing on
CaseStudy pages by changing padding to margin
(so double margins will collapse), make work
single all clickable, temporary link for contact
nav item, remove fade-in-up mixin as I needed additional
transition properties, add dynamic route transition colour

--- a/src/components/CaseStudy/_BrowserMockup.scss
+++ b/src/components/CaseStudy/_BrowserMockup.scss
@@ -19,6 +19,7 @@
     display: flex;
   
     .browser-mockup {
+      margin-bottom: 0;
       padding: 3rem;
       width: 50%;
 
@@ -108,8 +109,6 @@
 
   &.cropped-left,
   &.cropped-right {
-    margin: 0 #{-$spacing-xs};
-
     .browser-mockup-screen {
       padding-top: 768px / 930px * 100%;
     }
