--- a/src/components/LandingPage/_LandingPage.scss
+++ b/src/components/LandingPage/_LandingPage.scss
@@ -52,7 +52,7 @@
     .img {
       position: absolute;
       top: 0;
-      right: -#{$spacing-l};
+      right: 0;
       width: $img-block-w;
 
       img {
@@ -82,6 +82,10 @@
       p {
         font-size: $h5-fs;
       }
+    }
+
+    .img {
+      right: -#{$spacing-l};
     }
   }
 }
