--- a/src/components/CaseStudy/_BrowserMockup.scss
+++ b/src/components/CaseStudy/_BrowserMockup.scss
@@ -100,11 +100,11 @@
   }
 
   &.cropped-left {
-    padding: $spacing-l 0 0 calc(#{$spacing-l} * 2);
+    padding: $spacing-l 0 0 $spacing-l * 2;
   }
 
   &.cropped-right {
-    padding: $spacing-l calc(#{$spacing-l} * 2) 0 0;
+    padding: $spacing-l $spacing-l * 2 0 0;
   }
 
   &.cropped-left,
