--- a/src/components/CaseStudy/_Context.scss
+++ b/src/components/CaseStudy/_Context.scss
@@ -1,4 +1,6 @@
 .context {
+  margin: $spacing-l $spacing-xs;
+
   &-title {
     margin-bottom: $spacing-xs / 2;
   }
@@ -8,7 +10,7 @@
 
     span:first-child {
       display: block;
-      margin-bottom: calc(#{$spacing-xs} / 2);
+      margin-bottom: $spacing-xs / 2;
     }
   }
 
@@ -59,6 +61,10 @@
     .col-2 {
       grid-column: 2 / span 2;
     }
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin: $spacing-l / 2 $spacing-l;
   }
 }
 
