--- a/src/components/CaseStudy/_MobileMockup.scss
+++ b/src/components/CaseStudy/_MobileMockup.scss
@@ -1,5 +1,5 @@
 .mobile-mockup {
-  padding: $spacing-xs calc(#{$spacing-l} / 2) calc(#{$spacing-l} / 2);
+  padding: $spacing-l / 2;
   display: flex;
   justify-content: center;
   overflow: hidden;
