--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -19,7 +19,7 @@
  * © 2017 MyFonts Inc
 */
 
-@import url('//hello.myfonts.net/count/33ffdb');
+// @import url('//hello.myfonts.net/count/33ffdb');
 
 @font-face {
     font-family: 'Brandon Grotesque';
@@ -53,7 +53,7 @@
 */
 
 /* @import must be at top of file, otherwise CSS will not work */
-@import url('//hello.myfonts.net/count/396a7f');
+// @import url('//hello.myfonts.net/count/396a7f');
 
 @font-face {
     font-family: 'Gilroy-Light';
