--- a/src/components/Works/_Works.scss
+++ b/src/components/Works/_Works.scss
@@ -3,7 +3,8 @@
   background-color: $site-bgc;
 
   @media screen and (min-width: 1024px) {
-    padding: $spacing-xs $spacing-l 0 0;
+    margin: 0 $spacing-l 0 0;
+    padding: 0 $spacing-xs 0 0;
   }
 }
 
@@ -27,44 +28,54 @@
     display: inline-block;
   }
 
-  // Custom colour and hover state
+  // Custom colour and hover states
   &.enrichme {
-    .subtitle {
+    .subtitle,
+    .line {
       color: $enrichme;
     }
 
     .work-text:hover {
       .title,
-      .subtitle {
+      .subtitle,
+      .line {
         color: darken($enrichme, 10%);
       }
     }
   }
 
   &.bcito {
-    .subtitle {
+    .subtitle,
+    .line {
       color: $bcito;
     }
 
     .work-text:hover {
       .title,
-      .subtitle {
+      .subtitle,
+      .line {
         color: darken($bcito, 10%);
       }
     }
   }
 
   &.fwaste {
-    .subtitle {
+    .subtitle,
+    .line {
       color: $fwaste;
     }
 
     .work-text:hover {
       .title,
-      .subtitle {
+      .subtitle,
+      .line {
         color: darken($fwaste, 10%);
       }
     }
+  }
+
+  &-text:hover .line {
+    width: 4.4rem;
   }
 
   .line {
@@ -81,22 +92,17 @@
     height: calc(100vw - (#{$spacing-xs} * 2));
     order: -1;
     overflow: hidden;
-    // Delete
     background-color: $black;
   }
 
   .img {
     width: 100%;
+    height: auto;
   }
 
   @media screen and (min-width: 568px) {
     &-img {
-      max-height: 20rem;
-    }
-
-    .img {
-      width: auto;
-      height: 100%;
+      max-height: 22rem;
     }
   }
 
@@ -126,18 +132,6 @@
       width: calc(#{$img-block-w} - #{$spacing-l});
       max-height: 25rem;
       order: 2;
-    }
-
-    .img {
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  @media screen and (min-width: 1024px) {
-    .img {
-      width: auto;
-      height: 100%;
     }
   }
 }
@@ -193,7 +187,7 @@
 
     .line,
     .subtitle {
-      transition: transform 1000ms ease, opacity 1000ms ease, color 300ms ease;
+      transition: transform 1000ms ease, opacity 1000ms ease, color 300ms ease, width 500ms ease;
     }
 
     .work-img {
